# cz-transcribe

./: .gitignore  README.md  pyproject.toml  transcribe.py  transcribe_diarize.py
simple/: README.md  transcribe.py
