[project]
name = "cz-transcribe"
version = "0.1.0"
description = "Local offline Czech speech-to-text transcription"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper",
    "pyannote.audio>=4",
    "torch>=2.7",
    "torchaudio>=2.7",
    "setuptools<81",
]

[project.scripts]
transcribe = "transcribe:main"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
